--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,15 @@
 
             />
         <Button
+            android:id="@+id/button_leaderboard"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:drawableTop="@drawable/leaderboard"
+            android:textColor="@android:color/white"
+            android:background="@android:color/transparent"
+            />
+        <Button
             android:id="@+id/button_settings"
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -42,6 +51,7 @@
             android:textColor="@android:color/white"
             android:background="@android:color/transparent"
             />
+
 
 
 <!--        <Button-->
