--- a/app/src/main/res/layout/activity_pre_workout.xml
+++ b/app/src/main/res/layout/activity_pre_workout.xml
@@ -40,6 +40,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/workoutTypePreWorkout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="15dp"
@@ -61,6 +62,7 @@
                     android:layout_weight="2">
 
                     <ImageView
+                        android:id="@+id/workoutImagePreWorkout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:scaleType="fitEnd"
