--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -305,6 +305,7 @@
                     android:orientation="horizontal">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/mainFragmentCardio"
                         android:layout_width="225dp"
                         android:layout_height="150dp"
                         android:background="@drawable/shape2"
